pom rkHello3 update